--- a/task3/README
+++ b/task3/README
@@ -2,6 +2,7 @@
   1. 2950 аудиоданных общим весом 126,2 МиБ (132 279 515 байтов)
      вы intel(R)Core(TM) i7-4600U CPU 2,10 GHz (2 ядра, 4 потока):
        1.1. Последовательно: i finish my fork in 602.1422688961029 seconds
-       1.2. Параллелизм на уровне потоков:
-       1.3. Параллелизм на уровне процессов:
+       1.2. Параллелизм на уровне процессов: i finish my fork in 417.9533610343933 seconds
+       1.3. Параллелизм на уровне потоков: i finish my fork in 370.5020577907562 seconds
+        
        
